tests/rosetta/out/Java/convert-decimal-number-to-rational.error
javac: exit status 1
/tmp/ConvertDecimalNumberToRational.java:34: error: '.class' expected
                int d = int(ch) - int("0");
                           ^
/tmp/ConvertDecimalNumberToRational.java:34: error: not a statement
                int d = int(ch) - int("0");
                            ^
/tmp/ConvertDecimalNumberToRational.java:34: error: ';' expected
                int d = int(ch) - int("0");
                              ^
/tmp/ConvertDecimalNumberToRational.java:34: error: not a statement
                int d = int(ch) - int("0");
                                  ^
/tmp/ConvertDecimalNumberToRational.java:34: error: ';' expected
                int d = int(ch) - int("0");
                                     ^
5 errors
